--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - numpy
   - cytoolz
   - pip
+  - dwgsim=1.1.11
   - pip:
     - "git+https://github.com/knights-lab/NINJA-utils.git"
     - "git+https://github.com/knights-lab/DOJO.git"
