--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,17 @@
 name: analysis_SHOGUN
 channels:
   - conda-forge
+  - defaults
+  - r
   - bioconda
 dependencies:
-  - python=3
+  - python>=3.6
   - numpy
   - cytoolz
   - pip
-  - dwgsim=1.1.11
+  - pandas
+  - dwgsim==1.1.11
+  - snakemake==3.11.2
   - pip:
     - "git+https://github.com/knights-lab/NINJA-utils.git"
     - "git+https://github.com/knights-lab/DOJO.git"
