--- a/references/Snakefile
+++ b/references/Snakefile
@@ -10,7 +10,7 @@ def get_fasta_path(wildcards):
 
     if basename.startswith("miniGWG.100"):
         fasta_path = os.path.join(result_path, "gmg", "test")
-    elif:
+    else:
         assert False
 
     return fasta_path
