Added the benchmarks code.

--- a/config.yaml
+++ b/config.yaml
@@ -3,4 +3,6 @@ reference:
   miniGWG: "data/references/gmg/miniGWG"
   megaGMG: "data/references/gmg/megaGMG"
   megaGWG: "data/references/gmg/megaGWG"
-benchmarks: True
+
+settings:
+  benchmarks: true
