--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - dwgsim==1.1.11
   - snakemake==3.11.2
   - pip:
+    - ipdb
     - "git+https://github.com/knights-lab/NINJA-utils.git"
     - "git+https://github.com/knights-lab/DOJO.git"
     - "git+https://github.com/knights-lab/SHOGUN.git"
