--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,13 @@
 reference:
   test: "data/references/test"
-  miniGWG: "data/references/gmg/miniGWG"
-  megaGMG: "data/references/gmg/megaGMG"
-  megaGWG: "data/references/gmg/megaGWG"
+  miniGWG: "data/references/miniGWG"
+  megaGMG: "data/references/megaGMG"
+  megaGWG: "data/references/megaGWG"
 
 settings:
   benchmarks: true
   debug: true
 
 benchmark_replicates: 3
-contexts: ['test']
+contexts: ['test', 'miniGWG']
+tools: ['utree']
