--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,8 @@ reference:
   megaGWG: "data/references/megaGWG"
   miniGWG_darth: "data/references/miniGWG_darth"
 
+redistribute: "data/shogun/sheared_bayes.txt"
+
 settings:
   benchmarks: true
   debug: true
