--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,8 @@ reference:
   megaGMG: "data/references/megaGMG"
   megaGWG: "data/references/megaGWG"
   miniGWG_darth: "data/references/miniGWG_darth"
+  miniGWG_darth_lin: "data/references/linear"
+  miniGWG_darth_lin_dusted:
 
 redistribute: "data/shogun/database/sheared_bayes.txt"
 
